[feat] observation tool 추가 - #59